--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,20 @@
       "email": "ellisadigvom@expresspaygh.com"
     }
   ],
-  "minimum-stability": "stable",
+  "scripts": {
+    "test": "phpunit"
+  },
   "autoload": {
     "psr-4": {
       "Expay\\Logger\\": "src/"
     }
   },
   "require": {
-    "php": "^7.2",
+    "php": "^7.0",
     "phplucidframe/console-table": "^1.2"
   },
   "require-dev": {
+    "phpunit/phpunit": "^7.5",
     "fzaninotto/faker": "^1.9"
   }
 }
